--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,9 +30,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@theguide/models": "workspace:*",
     "@theguide/utils": "workspace:*",
+    "@types/dompurify": "^3.0.0",
     "@types/marked": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dompurify": "^3.0.0",
     "framer-motion": "^11.0.0",
     "marked": "^16.3.0",
     "tailwind-merge": "^2.2.0"
